Fixing small spacing issues on mobile

--- a/games/cargo-pusher/cargo-pusher.css
+++ b/games/cargo-pusher/cargo-pusher.css
@@ -9,7 +9,7 @@ main {
 }
 
 #game-canvas {
-  width: min(900px, calc(100dvh * 4/3 - 8px));
+  width: min(900px, calc(100dvh * 4/3 - 16px));
   background-color: orange;
   aspect-ratio: 4/3;
   border-radius: 5px;
